Replace /docs with /integrations
Go to the new page instead of relying on the redirect.

--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@ layout: index
                     </div>
                     <div class='section'>
                       <h3>Looking for existing integration guides?</h3>
-Hop over to our <a href="https://www.pagerduty.com/docs">monitoring system integration guides</a> for information
+Hop over to our <a href="https://www.pagerduty.com/integrations">monitoring system integration guides</a> for information
 on how to directly integrate PagerDuty with
 <a href="https://www.pagerduty.com/docs/guides/nagios-integration-guide">Nagios</a>,
 <a href="https://www.pagerduty.com/docs/guides/new-relic-integration-guide">New Relic</a>,
