Update a few more service key references

--- a/source/documentation/integration/events/resolve.html
+++ b/source/documentation/integration/events/resolve.html
@@ -58,7 +58,7 @@ layout: main
             Yes
           </td>
           <td>
-            The GUID of one of your "Events API" services. This is the "service key" listed on a Generic API's service detail page.
+            The GUID of one of your "Generic API" integrations. This is the "integration key" listed on a service's "Integrations" page.
           </td>
         </tr>
         <tr>
