--- a/source/documentation/rest/log_entries/show.html
+++ b/source/documentation/rest/log_entries/show.html
@@ -513,7 +513,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
                 <a href="/documentation/rest/types#string">String</a>
               </td>
               <td>
-                API service key
+                Generic API integration/service key
               </td>
             </tr>
             <tr>
