--- a/source/documentation/rest/services/index.html
+++ b/source/documentation/rest/services/index.html
@@ -98,7 +98,7 @@ layout: main
           <a href="/documentation/rest/services/regenerate_key">POST services/:id/regenerate_key</a>
         </td>
         <td>
-          Regenerate a new service key for an existing service.
+          Regenerate a new integration/service key for an existing service.
         </td>
       </tr>
     </tbody>
