--- a/source/documentation/rest/services/regenerate_key.html
+++ b/source/documentation/rest/services/regenerate_key.html
@@ -26,7 +26,7 @@ layout: main
     POST services/:id/regenerate_key
   </h1>
   <p>
-    Regenerate a new service key for an existing service.
+    Regenerate a new integration/service key for an existing service.
   </p>
   <h3>
     Resource URL
