--- a/source/documentation/rest/services/update.html
+++ b/source/documentation/rest/services/update.html
@@ -205,7 +205,7 @@ PUT https://<span class="base_url contenteditable persist" contenteditable="true
           </td>
           <td>
             <p>
-              The service key for the service.
+              The integration/service key for the service.
             </p>
             <p>
               Do not specify the domain. e.g. <code>my-service</code> rather than <code>my-service@my-subdomain.pagerduty.com</code>
