--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@ title: PagerDuty Developer - Home
 layout: index
 ---
 <div class="api-v20-hero">
-    <h1>Announcing the API v2.0 Beta</h1>
+    <h1>Announcing PagerDuty API v2.0</h1>
     <a href="https://v2.developer.pagerduty.com" class="pgd-button">Learn More</a>
 </div>
                   <div class='landing'>
