Rename integrations API to events API

--- a/source/documentation/integration/events/index.html
+++ b/source/documentation/integration/events/index.html
@@ -1,5 +1,5 @@
 ---
-title: Integrations API
+title: Events API
 layout: main
 permalink: /documentation/integration/events/
 redirect_from:
@@ -18,10 +18,10 @@ redirect_from:
 </ul>
 <div class='section'>
   <h1 class="title">
-    Integration API
+    Events API
   </h1>
   <p>
-    The PagerDuty event integration API is how you would add PagerDuty's advanced alerting functionality to any system that can make an HTTP API call. You can now add phone, SMS and email alerting to your monitoring tools, ticketing systems and custom software.
+    The PagerDuty Events API is how you would add PagerDuty's advanced alerting functionality to any system that can make an HTTP API call. You can now add phone, SMS and email alerting to your monitoring tools, ticketing systems and custom software.
   </p>
   <h3>
     Description
@@ -42,7 +42,7 @@ redirect_from:
     Getting Started
   </h2>
   <p>
-    The event integration API can be used with any "Generic API" integration in PagerDuty. If you don't already have a service with a "Generic API" integration, you should create one by <a href="https://support.pagerduty.com/hc/en-us/articles/202830340-Creating-a-Generic-API-Integration">following the steps in our "Creating a Generic API Integration" guide.</a>
+    The Events API can be used with any "Generic API" integration in PagerDuty. If you don't already have a service with a "Generic API" integration, you should create one by <a href="https://support.pagerduty.com/hc/en-us/articles/202830340-Creating-a-Generic-API-Integration">following the steps in our "Creating a Generic API Integration" guide.</a>
   </p>
   <p>
     Once the integration has been created, make a note of its "Integration Key". You'll use this value, which is unique to the integration, as the <code>service_key</code> that's submitted to the Events API.
