--- a/source/documentation/rest/incidents/count.html
+++ b/source/documentation/rest/incidents/count.html
@@ -132,7 +132,7 @@ GET https://<span class="base_url contenteditable persist" contenteditable="true
             No
           </td>
           <td>
-            Only counts the incidents with the passed de-duplication key. See the <a href="/documentation/integration/events/">PagerDuty Integration API</a> docs for further details.
+            Only counts the incidents with the passed de-duplication key. See the <a href="/documentation/integration/events/">PagerDuty Events API</a> docs for further details.
           </td>
         </tr>
         <tr>
