--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@ layout: index
                         </div>
                         <div class='span6 step'>Extend PagerDuty to fit your operational needs:
                           <ul>
-                            <li>Build an integration with your monitoring tool using our <a href="documentation/integration/events">Integration API</a></li>
+                            <li>Build an integration with your monitoring tool using our <a href="documentation/integration/events">Events API</a></li>
                             <li>Trigger actions when an incident is created / modified with <a href="documentation/rest/webhooks">webhooks</a></li>
                             <li>Integrate PagerDuty and your internal systems with our extensive REST API</li>
                             <li>Extend an existing <a href="documentation/code/tools">tool</a>, build on a <a href="documentation/code">code sample</a> or use one of our customer contributed <a href="documentation/code/libraries">libraries</a></li>
