Update links for v2 API.  The existing v1 documents will be hosted on v1.developer.pagerduty.com, and the new v2 documents will be hosted on developer.pagerduty.com.

--- a/source/documentation/integration/events/index.html
+++ b/source/documentation/integration/events/index.html
@@ -331,7 +331,7 @@ https://events.pagerduty.com/generic/2010-04-15/create_event.json
     <div id='discourse-comments'></div>
     <script type="text/javascript">
       DiscourseEmbed = { discourseUrl: 'https://community.pagerduty.com/',
-                       discourseEmbedUrl: 'https://developer.pagerduty.com/documentation/integration/events' };
+                       discourseEmbedUrl: 'https://v1.developer.pagerduty.com/documentation/integration/events' };
       (function() {
         var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
         d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
