--- a/source/documentation/rest/authentication.html
+++ b/source/documentation/rest/authentication.html
@@ -39,7 +39,7 @@ nav:
     <div id='discourse-comments'></div>
     <script type="text/javascript">
       DiscourseEmbed = { discourseUrl: 'https://community.pagerduty.com/',
-                       discourseEmbedUrl: 'https://developer.pagerduty.com/documentation/rest/authentication' };
+                       discourseEmbedUrl: 'https://v1.developer.pagerduty.com/documentation/rest/authentication' };
       (function() {
         var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
         d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
