--- a/source/documentation/rest/index.html
+++ b/source/documentation/rest/index.html
@@ -83,7 +83,7 @@ redirect_from:
     <div id='discourse-comments'></div>
     <script type="text/javascript">
       DiscourseEmbed = { discourseUrl: 'https://community.pagerduty.com/',
-                       discourseEmbedUrl: 'https://developer.pagerduty.com/documentation/rest' };
+                       discourseEmbedUrl: 'https://v1.developer.pagerduty.com/documentation/rest' };
       (function() {
         var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
         d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
