--- a/source/index.html
+++ b/source/index.html
@@ -58,7 +58,7 @@ to get events into PagerDuty.
 </div>
 <div class='section'>
                       <h3>Want to be part of BetaDuty?</h3>
-                     Fill out this <a href="https://developer.pagerduty.com/beta">form</a> and we will contact you when a Beta of your choice opens! 
+                     Fill out this <a href="https://v1.developer.pagerduty.com/beta">form</a> and we will contact you when a Beta of your choice opens! 
                     </div>
 <div class='section'>
 <h3>Questions?</h3>
@@ -82,6 +82,14 @@ Release Notes
 </h3>
 <table class='table release-notes'>
 <tbody>
+<tr>
+<td class='date'>June 22, 2016</td>
+<td>
+<ul>
+<li><a href="https://v2.developer.pagerduty.com/">PagerDuty API v2.0</a> is now generally available.</li>
+</ul>
+</td>
+</tr>
 <tr>
 <td class='date'>November 4, 2015</td>
 <td>
