--- a/source/release_notes.html
+++ b/source/release_notes.html
@@ -17,6 +17,17 @@ redirect_from:
 <tbody>
 <tr>
 <td class='date'>
+<a name='june-22-2016'></a>
+June 22, 2016
+</td>
+<td>
+<ul>
+<li><a href="https://v2.developer.pagerduty.com/">PagerDuty API v2.0</a> is now generally available.</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td class='date'>
 <a name='november-4-2015'></a>
 November 4, 2015
 </td>
