Added Swiftype index tags to improve Support KB searches, removed Discourse & Olark, updated links, moved webhooks to more logical place

--- a/source/documentation/integration/events/acknowledge.html
+++ b/source/documentation/integration/events/acknowledge.html
@@ -1,16 +1,13 @@
 ---
 title: PagerDuty Developer
 layout: main
+permalink: /documentation/events/acknowledge/
+redirect_from:
+  - /documentation/integration/events/acknowledge/
 ---
 <ul class="breadcrumb">
   <li>
-    <a href="/documentation/integration/events/">Integration</a>
-  </li>
-  <li style="list-style: none">
-    <span class="divider">/</span>
-  </li>
-  <li>
-    <a href="/documentation/integration/events/">Events</a>
+    <a href="/documentation/events/">Events API</a>
   </li>
   <li style="list-style: none">
     <span class="divider">/</span>
