--- a/source/documentation/rest/webhooks.html
+++ b/source/documentation/rest/webhooks.html
@@ -1,17 +1,12 @@
 ---
 title: PagerDuty Developer
 layout: main
-permalink: /documentation/rest/webhooks/
+permalink: /documentation/webhooks/
 redirect_from:
-  - /documentation/rest/webhooks.html
+  - /documentation/rest/webhooks/
+  - /documentation/webhooks.html
 ---
 <ul class="breadcrumb">
-  <li>
-    <a href="/documentation/rest">REST API</a>
-  </li>
-  <li style="list-style: none">
-    <span class="divider">/</span>
-  </li>
   <li>Webhooks
   </li>
 </ul>
