--- a/source/release_notes.html
+++ b/source/release_notes.html
@@ -119,7 +119,7 @@ August 1, 2013
 </td>
 <td>
 <ul>
-<li><a href="/documentation/rest/webhooks">Webhooks</a> are now generally available.</li>
+<li><a href="/documentation/webhooks">Webhooks</a> are now generally available.</li>
 </ul>
 </td>
 </tr>
@@ -130,7 +130,7 @@ July 11, 2013
 </td>
 <td>
 <ul>
-<li><a href="/documentation/rest/webhooks">Webhooks (Limited Release)</a> can now be queried through the API.</li>
+<li><a href="/documentation/webhooks">Webhooks (Limited Release)</a> can now be queried through the API.</li>
 </ul>
 </td>
 </tr>
