--- a/source/documentation/integration/events/trigger.html
+++ b/source/documentation/integration/events/trigger.html
@@ -1,16 +1,13 @@
 ---
 title: PagerDuty Developer
 layout: main
+permalink: /documentation/events/trigger/
+redirect_from:
+  - /documentation/integration/events/trigger/
 ---
 <ul class="breadcrumb">
   <li>
-    <a href="/documentation/integration/events/">Integration</a>
-  </li>
-  <li style="list-style: none">
-    <span class="divider">/</span>
-  </li>
-  <li>
-    <a href="/documentation/integration/events/">Events</a>
+    <a href="/documentation/events/">Events API</a>
   </li>
   <li style="list-style: none">
     <span class="divider">/</span>
