--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@ layout: index
                         <div class='span6 step'>Extend PagerDuty to fit your operational needs:
                           <ul>
                             <li>Build an integration with your monitoring tool using our <a href="documentation/integration/events">Events API</a></li>
-                            <li>Trigger actions when an incident is created / modified with <a href="documentation/rest/webhooks">webhooks</a></li>
+                            <li>Trigger actions when an incident is created / modified with <a href="documentation/webhooks">webhooks</a></li>
                             <li>Integrate PagerDuty and your internal systems with our extensive REST API</li>
                             <li>Extend an existing <a href="documentation/code/tools">tool</a>, build on a <a href="documentation/code">code sample</a> or use one of our customer contributed <a href="documentation/code/libraries">libraries</a></li>
                           </ul>
@@ -42,7 +42,7 @@ layout: index
                     
                     <div class='section'>
                       <h3>Want to build something without coding?</h3>
-                      With <a href="https://zapier.com/">Zapier</a> and <a href="https://support.pagerduty.com/hc/en-us/articles/202829420-Webhooks-Our-Most-Popular-Uses-For-Them">PagerDuty webhooks</a>, you can automate workflow with hundreds of apps.
+                      With <a href="https://zapier.com/">Zapier</a> and <a href="https://support.pagerduty.com/hc/en-us/articles/202829320">PagerDuty webhooks</a>, you can automate workflow with hundreds of apps.
                     </div>
                     <div class='section'>
                       <h3>Looking for existing integration guides?</h3>
@@ -56,10 +56,10 @@ on how to directly integrate PagerDuty with
 and a bunch more. If your monitoring system isn't directly supported, you can come back here and use our API
 to get events into PagerDuty.
 </div>
-<div class='section'>
+<!--<div class='section'>
                       <h3>Want to be part of BetaDuty?</h3>
                      Fill out this <a href="https://v1.developer.pagerduty.com/beta">form</a> and we will contact you when a Beta of your choice opens! 
-                    </div>
+                    </div>-->
 <div class='section'>
 <h3>Questions?</h3>
 <div>
@@ -69,7 +69,7 @@ to get events into PagerDuty.
 If you have any questions or need help setting up your PagerDuty account, please don't hesitate to contact us.
 </p>
 </div>
-<a href="http://support.pagerduty.com/" class="blocky">Via Our Support Forum</a>
+<a href="https://support.pagerduty.com/" class="blocky">Via Our Knowledge Base</a>
 <a href="mailto:support@pagerduty.com" class="blocky">Via Email (support@pagerduty.com)</a>
 <a href="https://twitter.com/PagerDuty" class="blocky">@PagerDuty on Twitter</a>
 </div>
