Fixed webhooks KB link

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@ layout: index
                   <div class='landing'>                    
                     <div class='section'>
                       <h3>Want to build something without coding?</h3>
-                      With <a href="https://zapier.com/">Zapier</a> and <a href="https://support.pagerduty.com/hc/en-us/articles/202829320">PagerDuty webhooks</a>, you can automate workflow with hundreds of apps.
+                      With <a href="https://zapier.com/">Zapier</a> and <a href="https://support.pagerduty.com/docs/webhooks">PagerDuty webhooks</a>, you can automate workflow with hundreds of apps.
                     </div>
                     <div class='section'>
                       <h3>Looking for existing integration guides?</h3>
