Upgrade Ruby for Heroku & remove dead links so build will show as passing

--- a/source/documentation/rest/webhooks.html
+++ b/source/documentation/rest/webhooks.html
@@ -267,7 +267,7 @@ redirect_from:
     Troubleshooting
   </h3>
   <p>
-    If you have any issues debugging your webhooks, you can use <a href="http://requestb.in/">RequestBin</a> to debug them.
+    If you have any issues debugging your webhooks, you can use <a href="https://github.com/Runscope/requestbin">RequestBin</a> to debug them.
   </p>
   <h3>
     Endpoints
