--- a/source/index.html
+++ b/source/index.html
@@ -3,8 +3,8 @@ title: PagerDuty Developer - Home
 layout: index
 ---
 <div class="api-v20-hero">
-    <h1>Migrate to PagerDuty REST API v2</h1>
-    <a href="https://v2.developer.pagerduty.com/docs/migrating-to-api-v2" class="pgd-button">Learn More</a>
+    <h1>REST API v1 is end-of-life</h1>
+    <a href="https://v2.developer.pagerduty.com/docs/migrating-to-api-v2" class="pgd-button">Migrate to v2</a>
 </div>
                   <div class='landing'>                    
                     <div class='section'>
